@@ -1,3 +1,7 @@
+2006-03-21  Leonard den Ottolander  <leonard den ottolander nl>
+
+	* choosesyntax.c: GPL v2 only.
+
 2006-03-17  Oswald Buddenhagen  <ossi@kde.org>
 
 	* edit-widget.h (struct WEdit): Add new field.
